fix: Set max width to ensure no horizontal scrollbars appear if container is not wide enough

--- a/src/components/video/_index.scss
+++ b/src/components/video/_index.scss
@@ -15,4 +15,6 @@
 	aspect-ratio: var(--aspect-ratio);
 	// convert to vh via * 1vh
 	height: calc(var(--height) * 1vh);
+
+	max-width: 100%;
 }
